--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -156,7 +156,7 @@ $disabled-opacity: .4;
                 }
             }
         }
-        &.animation-assets {
+        &.assets {
             > .add-asset {
                 position: relative;
 
