--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -33,6 +33,14 @@ body {
     background: $bcg-dark;
 }
 
+::-moz-selection {
+    color: $text-active;
+    background-color: #000;
+}
+::selection {
+    color: $text-active;
+    background-color: #000;
+}
 
 a {
     color: $text-active;
@@ -132,7 +140,8 @@ a:visited {
         }
     }
     > .title {
-        &:hover {
+        &:hover,
+        &:focus {
             color: $text-active;
             border-color: transparent;
             background-color: mix($bcg-primary, $bcg-dark, 50%);
@@ -215,9 +224,11 @@ a:visited {
     &.disabled.selected {
         background-color: #07f;
     }
-    &:hover {
+    &:hover,
+    &:focus {
         color: $text-active;
         background-color: mix($bcg-primary, $bcg-dark, 50%);
+        outline-color: $text-active;
     }
     &.selected {
         color: $text-active;
@@ -245,7 +256,8 @@ a:visited {
     &.active {
         > .bar {
             > .handle {
-                background-color: $text-active;
+                border-color: $text-active;
+                background-color: $bcg-dark;
                 box-shadow: 0 0 4px rgba(0, 0, 0, .5);
             }
         }
@@ -262,6 +274,12 @@ a:visited {
         > .handle {
             background-color: $text-primary;
             border-color: $bcg-darker;
+
+            &:focus {
+                border-color: $text-active;
+                background-color: $bcg-dark;
+                box-shadow: 0 0 4px rgba(0, 0, 0, .5);
+            }
         }
     }
 }
@@ -271,11 +289,15 @@ a:visited {
     background-color: $bcg-dark;
 
     &.active,
+    &:hover,
+    &:focus,
+    &.focus {
+        box-shadow: 0 0 4px rgba(0, 0, 0, .5);
+        border-color: $text-active;
+    }
     > input.field:focus,
     > input.field:hover {
         color: $text-active;
-        border-color: $bcg-darker;
-        box-shadow: 0 0 4px rgba(0, 0, 0, .5);
     }
 
     &.flash {
@@ -299,7 +321,7 @@ a:visited {
 
     &:hover,
     &:focus {
-        border-color: $bcg-darker;
+        border-color: $text-active;
         box-shadow: 0 0 4px rgba(0, 0, 0, .5);
         &:after {
             background-color: $text-active;
@@ -322,7 +344,7 @@ a:visited {
 
     &:hover,
     &:focus {
-        border-color: $bcg-darker;
+        border-color: $text-active;
         box-shadow: 0 0 4px rgba(0, 0, 0, .5);
         &:after {
             background-color: $text-active;
@@ -344,11 +366,15 @@ a:visited {
     background-color: $bcg-dark;
 
     &.active,
+    &:hover,
+    &:focus,
+    &.focus {
+        box-shadow: 0 0 4px rgba(0, 0, 0, .5);
+        border-color: $text-active;
+    }
     > input.field:focus,
     > input.field:hover {
         color: $text-active;
-        border-color: $bcg-darker;
-        box-shadow: 0 0 4px rgba(0, 0, 0, .5);
     }
 
     &.flash {
@@ -367,8 +393,9 @@ a:visited {
     border: 1px solid $bcg-darker;
     background-color: $bcg-dark;
 
-    &:hover {
-        border-color: $bcg-darker;
+    &:hover,
+    &:focus {
+        border-color: $text-active;
         box-shadow: 0 0 4px rgba(0, 0, 0, .5);
         &:after {
             background-color: rgba($text-active, .2);
@@ -402,9 +429,10 @@ a:visited {
     border: 1px solid $bcg-darker;
     background-color: $bcg-dark;
 
-    &:hover {
+    &:hover,
+    &:focus {
         color: $text-active;
-        border-color: $bcg-darker;
+        border-color: $text-active;
         box-shadow: 0 0 4px rgba(0, 0, 0, .5);
     }
     &.active {
@@ -413,6 +441,7 @@ a:visited {
     > ul {
         color: $text-primary;
         background-color: $bcg-darker;
+        outline: 1px solid $text-active;
 
         > li {
             &:hover {
@@ -436,8 +465,9 @@ a:visited {
     background-color: $bcg-dark;
     color: $text-primary;
 
-    &:hover {
-        border-color: $bcg-darker;
+    &:hover,
+    &:focus {
+        border-color: $text-active;
         box-shadow: 0 0 4px rgba(0, 0, 0, .5);
     }
 }
