--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -410,20 +410,21 @@ a:visited {
 
         &:hover {
             background-color: transparent;
-            // border-color: #1a1a1a;
         }
         &.selected {
             background-color: #07f;
-            // border-color: #07f;
         }
     }
     &:hover {
         background-color: rgba(#07f, 0.1);
-        // border-color: #07f;
+        outline: 1px solid #07f;
+    }
+    &:focus {
+        outline: 1px solid #07f;
     }
     &.selected {
         background-color: #07f;
-        // border-color: #07f;
+        outline: 1px solid #07f;
     }
 }
 
@@ -560,9 +561,13 @@ a:visited {
         border: 1px solid transparent;
         // display: table-row;
 
-        &:hover {
+        &:hover,
+        &:focus {
             border-color: #07f;
             background-color: rgba(0, 128, 255, 0.1);
+        }
+        &:focus {
+            outline: none;
         }
         > .icon {
             // line-left
@@ -843,6 +848,12 @@ a:visited {
             height: 16px;
             background: #07f;
             border: 1px solid #000;
+
+            &:focus,
+            &:hover {
+                outline: none;
+                background-color: #07f;
+            }
         }
     }
 }
@@ -902,7 +913,7 @@ a:visited {
 .ui-color-field:hover,
 .ui-color-field:focus {
     outline: none;
-    border-color: #7f7;
+    border-color: #07f;
     box-shadow: 0 0 4px #7f7;
 }
 
@@ -923,6 +934,10 @@ a:visited {
         > .clear {
             display: block;
         }
+    }
+    &:focus {
+        outline: none;
+        border-color: #07f;
     }
     &.empty {
         > .preview {
@@ -983,6 +998,9 @@ a:visited {
         opacity: $disabled-opacity;
         cursor: default;
     }
+    &:focus {
+        outline: none;
+    }
 }
 
 .ui-checkbox {
@@ -1003,6 +1021,10 @@ a:visited {
     &.disabled {
         opacity: $disabled-opacity;
         cursor: default;
+    }
+    &:focus {
+        outline: none;
+        border-color: #07f;
     }
 }
 
@@ -1030,6 +1052,13 @@ a:visited {
         background-color: #07f;
     }
     &:hover {
+        &:after {
+            content: none;
+        }
+    }
+    &:focus {
+        outline: none;
+        border-color: #07f;
         &:after {
             content: none;
         }
