number-field keyboard, all over number properties

--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -390,6 +390,10 @@ a:visited {
     margin: 0;
     font-size: 0;
     // border: 1px solid #1a1a1a;
+
+    &:focus {
+        outline: none;
+    }
 }
 
 .ui-grid-item {
