--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -72,6 +72,30 @@ a:visited {
     @extend .noSelect;
 }
 
+.ui-curve-field {
+    display: inline-block;
+    border: 1px solid #666;
+    width: 128px;
+    height: 24px;
+    margin: 4px;
+    background-color: #000;
+    vertical-align: top;
+    transition: opacity 100ms;
+    cursor: pointer;
+
+    &.disabled {
+        opacity: $disabled-opacity;
+        cursor: default;
+    }
+
+    > .ui-canvas {
+        width: 100%;
+        height: 100%;
+        line-height: 24px;
+        background-color: transparent;
+        border: none;
+    }
+}
 
 .ui-panel {
     position: relative;
