Some css fixes for curve field, Can toggle curve picker with space key

--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -402,6 +402,10 @@ a:visited {
     &.flash {
         @extend .ui-flash;
     }
+
+    &:hover, &:focus, &.active {
+        border-color: $text-active;
+    }
 }
 
 .ui-checkbox {
