--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -88,6 +88,10 @@ a:visited {
         cursor: default;
     }
 
+    &:focus {
+        outline: none;
+    }
+
     > .ui-canvas {
         width: 100%;
         height: 100%;
