error status message

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -72,6 +72,10 @@ $disabled-opacity: .4;
         overflow: hidden;
         font-size: 12px;
         color: #aaa;
+
+        &.error {
+            color: #fb222f;
+        }
     }
 }
 
