--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -582,6 +582,9 @@ a:visited {
             > .text {
                 opacity: $disabled-opacity;
             }
+            > .icon:after {
+                opacity: $disabled-opacity;
+            }
         }
     }
     > .title {
